# SoftRendererPlayer

./: CMake-VS-15-2017-Win64.bat  CMakeLists.txt  README.md
Source/Player/: CMakeLists.txt  DisplaySetting.h  ScreenPoint.h  SoftRenderer.cpp  SoftRenderer.h  WindowTimer.h  WindowsApp.cpp  WindowsPrecompiled.h
Source/Player/Res/: player.aps
Source/Runtime/Math/Private/: LinearColor.cpp  Math.cpp  Matrix3x3.cpp  Vector3.cpp
Source/Runtime/Math/Public/: Color32.h  MathUtil.h  Matrix3x3.h  Vector2.h  Vector3.h
Source/Runtime/Renderer/Private/: TriangleRasterizer.cpp  WindowsRSI.cpp
Source/Runtime/Renderer/Public/: RenderingSoftwareInterface.h  ScreenPoint.h  TriangleRasterizer.h  WindowsRSI.h
Source/Runtime/Renderer/Renderer/Public/: TriangleRasterizer.h  WindowsGDI.h
Source/Runtime/Runtime/Engine/Private/: Transform2D.cpp
Source/Runtime/Runtime/Engine/Public/: EngineHeaders.h  Transform2D.h
Source/Runtime/Runtime/Math/Private/: Math.cpp
Source/Runtime/Runtime/Math/Public/: CoreDefinition.h  LinearColor.h  MathHeaders.h  MathUtil.h
Source/Runtime/Runtime/Renderer/Private/: WindowsGDI.cpp
Source/Runtime/Runtime/Renderer/Public/: RenderingSoftwareInterface.h  ScreenPoint.h  WindowsRSI.h
